force-app/main/default/objects/Opportunity/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <label>Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Albert Nelson - 01506</fullName>
            </value>
            <value>
                <fullName>Andrew Davis - 02201</fullName>
            </value>
            <value>
                <fullName>Andrew Schanuth - 02908</fullName>
            </value>
            <value>
                <fullName>Bill Boney - 04609</fullName>
            </value>
            <value>
                <fullName>Bill Gillette - 06025</fullName>
            </value>
            <value>
                <fullName>Brad Bodnar - 05038</fullName>
            </value>
            <value>
                <fullName>Brian Blodgett - 04707</fullName>
            </value>
            <value>
                <fullName>Carl Cramer - 04816</fullName>
            </value>
            <value>
                <fullName>Charles Davis - 01206</fullName>
            </value>
            <value>
                <fullName>Chris Harris -  09014</fullName>
            </value>
            <value>
                <fullName>Christine Smith - 01712</fullName>
            </value>
            <value>
                <fullName>Christopher Smith - 04607</fullName>
            </value>
            <value>
                <fullName>Curt Thrasher - 00209</fullName>
            </value>
            <value>
                <fullName>David Anderson - 00207</fullName>
            </value>
            <value>
                <fullName>David Taylor - 07002</fullName>
            </value>
            <value>
                <fullName>Deb Caton - 01901</fullName>
            </value>
            <value>
                <fullName>Deborah Beeman - 04803</fullName>
            </value>
            <value>
                <fullName>Don Huff - 01411</fullName>
            </value>
            <value>
                <fullName>Don Stoeckel - 02222</fullName>
            </value>
            <value>
                <fullName>Douglas Walker - 03011</fullName>
            </value>
            <value>
                <fullName>Ed Abraham - 01936</fullName>
            </value>
            <value>
                <fullName>Ed Osborne - 04809</fullName>
            </value>
            <value>
                <fullName>Edward Breaux - 02602</fullName>
            </value>
            <value>
                <fullName>Edward Novak III - 01603</fullName>
            </value>
            <value>
                <fullName>Edward Ramos - 00203</fullName>
            </value>
            <value>
                <fullName>Eric Johnson - 01110</fullName>
            </value>
            <value>
                <fullName>Eric Strait - 09018</fullName>
            </value>
            <value>
                <fullName>Erik Baez - 01601</fullName>
            </value>
            <value>
                <fullName>Francisco Pérez - XXX</fullName>
            </value>
            <value>
                <fullName>Fred Matos - 02011</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>