force-app/main/default/objects/Opportunity/fields/Application_and_Required_Docs_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Application_and_Required_Docs_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Sears Commercial 1 as Method of Payment is selected, then Application and Required Docs submitted is required</description>
    <inlineHelpText>If Sears Commercial 1 as Method of Payment is selected, then Application and Required Docs submitted is required</inlineHelpText>
    <label>Application and Required Docs Submitted</label>
    <type>Checkbox</type>
</CustomField>