force-app/main/default/objects/Opportunity/fields/Approved_for_Purchasing_Need__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Purchasing_Need__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Sears Commercial 1 as Method of Payment is selected, then &quot;Approved for Purchasing Need&quot; is required</description>
    <inlineHelpText>If Sears Commercial 1 as Method of Payment is selected, then &quot;Approved for Purchasing Need&quot; is required</inlineHelpText>
    <label>Approved for Purchasing Need</label>
    <type>Checkbox</type>
</CustomField>