force-app/main/default/objects/Opportunity/fields/BRD_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>BRD_Submission_Date__c</fullName>
    <description>Enter the date that BRD has been submitted</description>
    <inlineHelpText>Enter the date that BRD has been submitted</inlineHelpText>
    <label>BRD Submission Date</label>
    <type>Date</type>
</CustomField>