force-app/main/default/objects/Opportunity/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
                <default>true</default>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Home Services</fullName>
            </value>
            <value>
                <fullName>A and E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>