force-app/main/default/objects/Opportunity/fields/Business_Development_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Manager__c</fullName>
    <label>Business Development Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ben Mueller - 56358</fullName>
            </value>
            <value>
                <fullName>Brian Hale - 51041</fullName>
            </value>
            <value>
                <fullName>Gecova (Jay) Doyal - 56357</fullName>
            </value>
            <value>
                <fullName>Kevin Piotrowski - 51038</fullName>
            </value>
            <value>
                <fullName>Kevin Wilch - 50538</fullName>
            </value>
            <value>
                <fullName>Lindy Ely - 50716</fullName>
            </value>
            <value>
                <fullName>Nick Bodmer - 55376</fullName>
            </value>
            <value>
                <fullName>Peggy D&#39;Alessandro - 50715</fullName>
            </value>
            <value>
                <fullName>Rod Pasion - 50713</fullName>
            </value>
            <value>
                <fullName>Scott Ferguson - 54401</fullName>
            </value>
            <value>
                <fullName>Thyra Landis - 53406</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>