force-app/main/default/objects/Opportunity/fields/Call_Volume_Current_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Call_Volume_Current_Fiscal__c</fullName>
    <label>Call Volume Current Fiscal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>