force-app/main/default/objects/Opportunity/fields/CAPCON_Approved__c.field-meta.xml
<CustomField>
    <fullName>CAPCON_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAPCON Approved</label>
    <type>Checkbox</type>
</CustomField>