force-app/main/default/objects/Opportunity/fields/CAPCON_Required__c.field-meta.xml
<CustomField>
    <fullName>CAPCON_Required__c</fullName>
    <description>Determines whether CAPCON approval (going to the board for approval) is required</description>
    <label>CAPCON Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>