force-app/main/default/objects/Opportunity/fields/Carry_in_Approval_of_BRD__c.field-meta.xml
<CustomField>
    <fullName>Carry_in_Approval_of_BRD__c</fullName>
    <label>Carry-in Approval of BRD</label>
    <type>Date</type>
</CustomField>