force-app/main/default/objects/Opportunity/fields/CCN_Approval_of_BRD__c.field-meta.xml
<CustomField>
    <fullName>CCN_Approval_of_BRD__c</fullName>
    <label>CCN Approval of BRD</label>
    <type>Date</type>
</CustomField>