force-app/main/default/objects/Opportunity/fields/Claim_Rejection_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Claim_Rejection_Reasons__c</fullName>
    <inlineHelpText>Enter the possible reasons for claims rejection by vendor</inlineHelpText>
    <label>Claim Rejection Reasons</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>