force-app/main/default/objects/Opportunity/fields/Claims__c.field-meta.xml
<CustomField>
    <fullName>Claims__c</fullName>
    <label>Claim filed per</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>trip</fullName>
            </value>
            <value>
                <fullName>completed call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>