force-app/main/default/objects/Opportunity/fields/Close_Date_Aging__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Aging__c</fullName>
    <formula>CloseDate  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>