force-app/main/default/objects/Opportunity/fields/Close_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Date__c</fullName>
    <label>Close Lost Date</label>
    <type>DateTime</type>
</CustomField>