force-app/main/default/objects/Opportunity/fields/Contract_Administration_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Administration_Status__c</fullName>
    <label>Contract Administration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open (O)</fullName>
            </value>
            <value>
                <fullName>Future (F)</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Incomplete (ID) (1)</fullName>
            </value>
            <value>
                <fullName>Incomplete (IC) (2)</fullName>
            </value>
            <value>
                <fullName>Declined (D)</fullName>
            </value>
            <value>
                <fullName>Closed (C)</fullName>
            </value>
            <value>
                <fullName>Approved But Incomplete (AI)</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>