force-app/main/default/objects/Opportunity/fields/Contract_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer PO</fullName>
            </value>
            <value>
                <fullName>Customer Contract</fullName>
            </value>
            <value>
                <fullName>SC Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>