force-app/main/default/objects/Opportunity/fields/Contract_Attached__c.field-meta.xml
<CustomField>
    <fullName>Contract_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if a Contract is Attached</description>
    <inlineHelpText>Check if a Contract is Attached</inlineHelpText>
    <label>Contract Attached</label>
    <type>Checkbox</type>
</CustomField>