force-app/main/default/objects/Opportunity/fields/Contract_Desk__c.field-meta.xml
<CustomField>
    <fullName>Contract_Desk__c</fullName>
    <description>Determines whether a project opportunity will go to the CXC Contract Desk.</description>
    <inlineHelpText>Is this project going to the contract desk?</inlineHelpText>
    <label>Contract Desk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>