force-app/main/default/objects/Opportunity/fields/Created_to_Close_Age__c.field-meta.xml
<CustomField>
    <fullName>Created_to_Close_Age__c</fullName>
    <formula>CloseDate - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created to Close Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>