force-app/main/default/objects/Opportunity/fields/Created_to_Close_Lost__c.field-meta.xml
<CustomField>
    <fullName>Created_to_Close_Lost__c</fullName>
    <formula>Close_Lost_Date__c -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created to Close Lost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>