force-app/main/default/objects/Opportunity/fields/Created_to_Close_Won__c.field-meta.xml
<CustomField>
    <fullName>Created_to_Close_Won__c</fullName>
    <formula>Close_Won_Date__c -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created to Close Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>