force-app/main/default/objects/Opportunity/fields/Created_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>Created_to_Ship__c</fullName>
    <formula>Shipping_Start_Date__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created to Ship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>