force-app/main/default/objects/Opportunity/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <inlineHelpText>Enter the existing labor rate for this opportunity</inlineHelpText>
    <label>Current labor rate</label>
    <type>TextArea</type>
</CustomField>