force-app/main/default/objects/Opportunity/fields/Current_Fiscal_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Revenue__c</fullName>
    <label>Current Fiscal Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>