force-app/main/default/objects/Opportunity/fields/Delivery_Approval_of_BRD__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Approval_of_BRD__c</fullName>
    <label>Delivery Approval of BRD</label>
    <type>Date</type>
</CustomField>