force-app/main/default/objects/Opportunity/fields/ECM_ID__c.field-meta.xml
<CustomField>
    <fullName>ECM_ID__c</fullName>
    <externalId>true</externalId>
    <label>ECM ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>