force-app/main/default/objects/Opportunity/fields/Estimated_Annual_Appliance_spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Appliance_spend__c</fullName>
    <label>Estimated Annual Appliance spend?</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>