force-app/main/default/objects/Opportunity/fields/Estimated_Calls_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Calls_Per_Week__c</fullName>
    <label>Estimated Calls Per Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 25</fullName>
            </value>
            <value>
                <fullName>26 – 100</fullName>
            </value>
            <value>
                <fullName>101 – 200</fullName>
            </value>
            <value>
                <fullName>200+</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>