force-app/main/default/objects/Opportunity/fields/Estimated_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Opportunity_Amount__c</fullName>
    <description>Used to map the Estimated Opportunity Amount on the Lead</description>
    <label>Estimated Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>