force-app/main/default/objects/Opportunity/fields/Finance_Approval_of_BRD__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_of_BRD__c</fullName>
    <description>Finance to enter the date in which they have reviewed and approve the terms of the BRD.</description>
    <inlineHelpText>Finance to enter the date in which they have reviewed and approve the terms of the BRD.</inlineHelpText>
    <label>Finance Approval of BRD</label>
    <type>Date</type>
</CustomField>