force-app/main/default/objects/Opportunity/fields/Finance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Financial Approval for deals &gt; $500,000</description>
    <inlineHelpText>Only required for deals over $500,000</inlineHelpText>
    <label>Finance Approved</label>
    <type>Checkbox</type>
</CustomField>