force-app/main/default/objects/Opportunity/fields/Finance_Review__c.field-meta.xml
<CustomField>
    <fullName>Finance_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Review</label>
    <type>Checkbox</type>
</CustomField>