force-app/main/default/objects/Opportunity/fields/Funnel_Score__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Score__c</fullName>
    <description>Read Only field that will populate the Scorecard Total based on values selected.</description>
    <inlineHelpText>Read Only field that will populate the Scorecard Total based on values selected.</inlineHelpText>
    <label>Funnel Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>