force-app/main/default/objects/Opportunity/fields/Funnel_Scorecard_Count__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Scorecard_Count__c</fullName>
    <description>Shows the # of Scorecards related to the opportunity</description>
    <label>Funnel Scorecard Count</label>
    <summaryForeignKey>Funnel_Scorecard__c.Opportunity_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>