force-app/main/default/objects/Opportunity/fields/Funnel_Scorecard_Hidden_Total__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Scorecard_Hidden_Total__c</fullName>
    <formula>Scorecard_B1_through_B8_Commercial__c +  Scorecard_B9_through_O6_Commercial__c +  Scorecard_O7_through_O10_Commercial__c +  Scorecard_B1_through_B8__c +  Scorecard_B9_through_O6__c +  Scorecard_O7_through_O10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funnel Scorecard Hidden Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>