force-app/main/default/objects/Opportunity/fields/Funnel_Scorecard_Total__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Scorecard_Total__c</fullName>
    <description>Populates the values of the Funnel Scorecard Hidden Total field.  This allowed for minimal reporting changes.</description>
    <formula>Funnel_Scorecard_Hidden_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funnel Scorecard Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>