force-app/main/default/objects/Opportunity/fields/Green_Yellow_Red_Status__c.field-meta.xml
<CustomField>
    <fullName>Green_Yellow_Red_Status__c</fullName>
    <formula>if(and( ISPICKVAL( StageName , &quot;Deal Closure/Won&quot;) ,  Shipping_End_Date__c  &gt; today()),&quot;Green&quot;,
if(and( TEXT( StageName )&lt;&gt;&quot;Closed Lost&quot;,TEXT( StageName )&lt;&gt;&quot;Deal Closure/Won&quot; ,  Shipping_End_Date__c  &gt; today(), Probability  &lt;&gt; 0),&quot;Yellow&quot;,
if(and( TEXT( StageName )&lt;&gt;&quot;Closed Lost&quot;,TEXT( StageName )&lt;&gt;&quot;Deal Closure/Won&quot; ,  Shipping_End_Date__c  &gt; today(), Probability  = 0),&quot;Red&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Green Yellow Red Status</label>
    <type>Text</type>
</CustomField>