force-app/main/default/objects/Opportunity/fields/Hybrid_Customer__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hybrid Customer</label>
    <type>Checkbox</type>
</CustomField>