force-app/main/default/objects/Opportunity/fields/In_Home_Approval_of_BRD__c.field-meta.xml
<CustomField>
    <fullName>In_Home_Approval_of_BRD__c</fullName>
    <label>In-Home Approval of BRD</label>
    <type>Date</type>
</CustomField>