force-app/main/default/objects/Opportunity/fields/Installation_Approval_of_BRD__c.field-meta.xml
<CustomField>
    <fullName>Installation_Approval_of_BRD__c</fullName>
    <label>Installation Approval of BRD</label>
    <type>Date</type>
</CustomField>