force-app/main/default/objects/Opportunity/fields/Is_Created_From_Contract_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_From_Contract_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Opportunity is created from the batch apex that processes Contracts expiring in 90 days. Unchecked otherwise.</description>
    <inlineHelpText>Checked if the Opportunity is created from the batch apex that processes Contracts expiring in 90 days. Unchecked otherwise.</inlineHelpText>
    <label>Is Created From Contract Renewal</label>
    <type>Checkbox</type>
</CustomField>