force-app/main/default/objects/Opportunity/fields/IST_Owned__c.field-meta.xml
<CustomField>
    <fullName>IST_Owned__c</fullName>
    <description>WFR: Read Only field that updates if the Lead was originally owned by the IST queue</description>
    <inlineHelpText>Read Only field that updates if the Lead was originally owned by the IST queue</inlineHelpText>
    <label>IST Owned</label>
    <length>40</length>
    <type>Text</type>
</CustomField>