force-app/main/default/objects/Opportunity/fields/Key_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Key_Next_Steps__c</fullName>
    <label>Key Next Steps</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>