force-app/main/default/objects/Opportunity/fields/Line_of_Credit_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Credit_Assigned__c</fullName>
    <label>Line of Credit Assigned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>