force-app/main/default/objects/Opportunity/fields/Local_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Local_Service_Area__c</fullName>
    <description>Shows the City and State if Local Service is required</description>
    <inlineHelpText>Shows the City and State if Local Service is required</inlineHelpText>
    <label>Local Service Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>