force-app/main/default/objects/Opportunity/fields/Lost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lost_Amount__c</fullName>
    <formula>IF ( AND ( IsClosed = True, IsWon = False ),
Amount, 0 )</formula>
    <label>Lost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>