force-app/main/default/objects/Opportunity/fields/Managers_Email__c.field-meta.xml
<CustomField>
    <fullName>Managers_Email__c</fullName>
    <description>Hidden Field used with WFR to populate the Managers email address.</description>
    <label>Managers Email</label>
    <type>Email</type>
</CustomField>