force-app/main/default/objects/Opportunity/fields/Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Payment__c</fullName>
    <description>Method of Payment is required when stage = Deal Closure/Won</description>
    <inlineHelpText>Method of Payment is required when stage = Deal Closure/Won</inlineHelpText>
    <label>Method of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial One</fullName>
            </value>
            <value>
                <fullName>3rd Party Credit Card</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>State &amp; Local Underwriting Recourse Policy (SLURP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>