force-app/main/default/objects/Opportunity/fields/mh_Associated_Blue_Sheet__c.field-meta.xml
<CustomField>
    <fullName>mh_Associated_Blue_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associated Blue Sheet</label>
    <type>Checkbox</type>
</CustomField>