force-app/main/default/objects/Opportunity/fields/mh_Blue_Sheet_Type__c.field-meta.xml
<CustomField>
    <fullName>mh_Blue_Sheet_Type__c</fullName>
    <label>Blue Sheet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>A and E or Home Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>