force-app/main/default/objects/Opportunity/fields/mh_Last_Updated_Blue_Sheet__c.field-meta.xml
<CustomField>
    <fullName>mh_Last_Updated_Blue_Sheet__c</fullName>
    <label>Last Updated Blue Sheet</label>
    <type>DateTime</type>
</CustomField>