force-app/main/default/objects/Opportunity/fields/mh_Red_Flags__c.field-meta.xml
<CustomField>
    <fullName>mh_Red_Flags__c</fullName>
    <label>Red Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>