force-app/main/default/objects/Opportunity/fields/Month_Target__c.field-meta.xml
<CustomField>
    <fullName>Month_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box to indicate this opportunity should be on your Target List for the Month.</inlineHelpText>
    <label>Monthly Target</label>
    <type>Checkbox</type>
</CustomField>