force-app/main/default/objects/Opportunity/fields/NCC_Approval_of_BRD__c.field-meta.xml
<CustomField>
    <fullName>NCC_Approval_of_BRD__c</fullName>
    <label>NCC Approval of BRD</label>
    <type>Date</type>
</CustomField>