force-app/main/default/objects/Opportunity/fields/New_Contract_Terms__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Terms__c</fullName>
    <inlineHelpText>Enter any new contract terms for renewal opportunities</inlineHelpText>
    <label>New Contract Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>