force-app/main/default/objects/Opportunity/fields/Next_Fiscal_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Next_Fiscal_Revenue__c</fullName>
    <label>Next Fiscal Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>