force-app/main/default/objects/Opportunity/fields/Next_Steps_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Last_Updated__c</fullName>
    <description>Field will update with a WFR every time the Next Steps are added or edited.</description>
    <label>Next Steps Last Updated</label>
    <type>DateTime</type>
</CustomField>