force-app/main/default/objects/Opportunity/fields/Num_of_Units_Built_Rehabbed_per_year__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Units_Built_Rehabbed_per_year__c</fullName>
    <label># of Units Built/Rehabbed per year?</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>