force-app/main/default/objects/Opportunity/fields/Open_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Amount__c</fullName>
    <formula>IF ( IsClosed = False, Amount, 0 )</formula>
    <label>Open Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>