force-app/main/default/objects/Opportunity/fields/Opportunity_Identification_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Identification_Date__c</fullName>
    <description>Date the opportunity was entered in the previous pipeline management tool</description>
    <inlineHelpText>Date the opportunity was entered in the previous pipeline management tool</inlineHelpText>
    <label>Legacy Create Date</label>
    <type>Date</type>
</CustomField>